fix some bugs.